# umami-server

./: Cargo.toml
migrations/: 01-create-db.sql
src/: main.rs  routes.rs
